Fixed habmurger button and now it is not showing X hamburger by default (tablet size)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -375,7 +375,7 @@ footer {
     content: "";
     position: absolute;
     top: 70px;
-    left: 0;
+    left: 0px;
     width: 100%;
     height: 34.93px; }
   .menu_desktop {
