--- a/assets/sass/_media.sass
+++ b/assets/sass/_media.sass
@@ -55,7 +55,7 @@
          content: ""
          position: absolute
          top: 70px
-         left: 0
+         left: 0px
          width: 100%
          height: 34.93px
          // z-index: 0
@@ -96,6 +96,7 @@
             outline: none
             //* Set on top of menu:after img element */
             z-index: 4
+            //* Create default menu button visual when it's not clicked */
             //* Create the same style on 3 elements */
             &:before,
             &:after,
@@ -151,18 +152,21 @@
             .show-menu
                top: 0px
 
+
    .intro
       bottom: -5.3px
       height: 406px
       &_video
          &_btn
             top: 162px
-   
+
+
    .about
       .text-container
          p
             width: 608px
-   
+
+
    .agree
       &_container
          width: 100%
@@ -180,7 +184,6 @@
                height: 54px
                   
 
-
    .contactf
       &_container
          textarea
@@ -189,7 +192,6 @@
             margin-top: 15px
          &_check
             margin-top: 10px
-
 
 
    .sponsors
@@ -210,7 +212,8 @@
          .img4 
             width: 49px
             height: 71px
-   
+
+
    footer
       .container
          // background-color: #757575
@@ -270,9 +273,11 @@
          display: none
       &_mobile
          display: block
+
    .intro
       width: 768px
       height: 406px
+
    footer
       .container
          // background-color: #888888
